<resources>
    <string name="app_name">AllwaysOclock</string>
    <string name="AlarmasListasTitulo">Alarmas</string>
    <string name="AlarmasNuevaTitulo">Nueva Alarma</string>
    <string name="AlarmasConfigTitulo">Configuracion de Alarma</string>
    <string name="AlarmasDetencionTitulo">Modo detencion</string>
    <string name="AlarmasCompartirTitulo">Compartir</string>
    <string name="AlarmasRepeticionTitulo">Repetición</string>
    <string name="AlarmasNotficacionTitulo">Notificaciones</string>
    <string name="AsistentePaso1Titulo">Bienvenido</string>
    <string name="AsistentePaso1Desc">Ingrese la hora de la alarma</string>
    <string name="AsistentePaso2Titulo">Paso 2</string>
    <string name="AsistentePaso2Desc">Seleccione los días de la semana</string>
    <string name="AsistentePaso3Titulo">Paso 3</string>
    <string name="AsistentePaso3Desc">Seleccione el tiempo de repetición</string>
    <string name="AsistentePaso4Titulo">Paso 4</string>
    <string name="AsistentePaso4Desc">Seleccione un sonido</string>
    <string name="AsistentePaso5Titulo">Paso 5</string>
    <string name="AsistentePaso5Desc">Seleccione la forma de detener la alarma</string>
    <string name="AsistentePaso6Titulo">Paso 6</string>
    <string name="AsistentePaso6Desc">Ingrese un nombre para su nueva alarma</string>
    <!--texto Botones-->
    <string name="BotonCrear">Crear</string>
    <string name="BotonAceptar">Aceptar</string>
    <string name="BotonCancelar">Cancelar</string>
    <string name="BotonSiguiente">Siguiente</string>
    <string name="BotonAnterior">Anterior</string>
    <string name="BotonTonos">Tonos</string>
    <string name="BotonReloj">Reloj</string>
    <string name="BotonMusica">Música</string>
    <string name="BotonAm">AM</string>
    <string name="BotonPm">PM</string>
    <string name="BotonSonido">Sonido</string>
    <string name="BotonRepeticion">Repetición</string>
    <string name="BotonDetencion">Detención</string>
    <string name="BotonNotificacion">Notificaciones</string>
    <string name="BotonAsistenteDesc">Boton para iniciar asistente</string>
    <string name="BotonNuevaAlarmaDesc">Boton para Crear Alarma</string>
    <string name="BotonCompartirDesc">Compartir</string>
    <string name="BotonBorrarDesc">Boton para Eliminar</string>
    <string name="BotonVolverDesc">Boton para Volver</string>
    <string name="BotonSonidoDesc">Boton para Sonido</string>
    <string name="BotonRepeticionDesc">Boton para retardar la alarma</string>
    <string name="BotonDetenerDesc">Boton para detener la alarma</string>
    <string name="BotonNotificacionDesc">Boton para notificaciones de la alarma</string>
    <string name="BotonCrearDesc">Boton para Crear</string>
    <string name="BotonCancelarDesc">Boton para Cancelar</string>
    <string name="BotonAceptarDesc">Boton para confirmar el proceso</string>
    <string name="BotonRelojDesc">Boton para seleccionar hora</string>
    <!--label-->
    <string name="LabelCorreo">Correo</string>
    <string name="LabelWapp">Whatsapp</string>
    <string name="LabelURL">URL</string>
    <string name="LabelTiempo">Tiempo</string>
    <string name="LabelVeces">Veces</string>
    <string name="LabelLlamada">Llamada</string>
    <string name="LabelSms">SMS</string>
    <!--objeto formulario-->
    <string name="InputNombre">Nombre</string>
    <string name="InputNombreDesc">Ingrese Nombre Alarma</string>
    <string name="InputHora">00</string>
    <string name="InputHoraDesc">Ingrese Hora Alarma</string>
    <string name="InputMinutos">00</string>
    <string name="InputMinutosaDesc">Ingrese Minutos Alarma</string>

    <string-array name="repeticiones">
        <item>Diario</item>
        <item>Mensual</item>
        <item>Semanal</item>
        <item>Anual</item>
    </string-array>
    <string-array name="snooze">
        <item>Horas</item>
        <item>Minutos</item>
        <item>Días</item>
    </string-array>
</resources>