<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/global"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaAlarma">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoaplicacion2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inferior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/botones_abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloVentana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingBottom="5dp"
            android:text="@string/AlarmasNuevaTitulo"
            android:textColor="@color/negroAOC"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/campotexto"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Nombre"
            android:textColor="@color/Gris30AOC"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextHOra"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/campotexto"
                android:ems="10"
                android:inputType="number"
                android:maxWidth="50dp"
                android:maxLength="2"
                android:minHeight="48dp"
                android:text="@string/InputHora"
                android:textAlignment="center"
                android:textColor="@color/Gris30AOC"
                android:textSize="14sp"></EditText>

            <EditText
                android:id="@+id/editTextMinutos"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/campotexto"
                android:ems="10"
                android:inputType="number"
                android:maxWidth="50dp"
                android:maxLength="2"
                android:minHeight="48dp"
                android:text="@string/InputMinutos"
                android:textAlignment="center"
                android:textColor="@color/Gris30AOC"
                android:textSize="14sp"></EditText>

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/InputHoraDesc"
                android:minHeight="48dp"
                android:padding="0dp"
                android:paddingRight="0dp"
                app:srcCompat="@drawable/ic_ampm" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_reloj" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/ic_repeticion" />

            <Spinner
                android:id="@+id/repeticion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="5"
                android:background="@drawable/campotexto"
                android:entries="@array/repeticiones"
                android:minHeight="48dp"
                android:paddingEnd="10dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/BotonRelojDesc"
            app:srcCompat="@drawable/ic_semana" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/botones_abajo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                android:id="@+id/CardAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                android:onClick="irAParametrosAlarma"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/botoncompuestoazul"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/BotonAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/BotonAceptarDesc"
                        android:minHeight="22sp"
                        android:text="@string/BotonAceptar"
                        android:textColor="@color/blancoAOC"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imageAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/BotonCrearDesc"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:srcCompat="@drawable/ic_aceptar" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cardCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="0dp"
                android:clickable="true"
                android:onClick="irAtras"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:background="@drawable/botoncompuestoazul"
                    android:baselineAligned="false"
                    android:clickable="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/BotonCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/BotonCancelarDesc"
                        android:minHeight="22sp"
                        android:text="@string/BotonCancelar"
                        android:textColor="@color/blancoAOC"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imagenCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/BotonCancelarDesc"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:srcCompat="@drawable/ic_cancelar" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>