<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Asistente1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoaplicacion2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/botones_arriba"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tituloVentana2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:paddingBottom="5dp"
                    android:text="@string/AsistentePaso1Titulo"
                    android:textColor="@color/negroAOC"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </android.support.constraint.ConstraintLayout>

            <ImageButton
                android:id="@+id/icono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/BotonNuevaAlarmaDesc"
                android:cropToPadding="true"
                android:onClick="irANuevaAlarma"
                android:padding="0dp"
                app:srcCompat="@drawable/ic_asistente3"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:id="@+id/inferior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/botones_abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/superior">


        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AsistentePaso1Desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextHOra"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/campotexto"
                android:ems="10"
                android:inputType="number"
                android:maxWidth="50dp"
                android:maxLength="2"
                android:minHeight="48dp"
                android:text="@string/InputHora"
                android:textAlignment="center"
                android:textColor="@color/Gris30AOC"
                android:textSize="14sp"></EditText>

            <EditText
                android:id="@+id/editTextMinutos"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/campotexto"
                android:ems="10"
                android:inputType="number"
                android:maxWidth="50dp"
                android:maxLength="2"
                android:minHeight="48dp"
                android:text="@string/InputMinutos"
                android:textAlignment="center"
                android:textColor="@color/Gris30AOC"
                android:textSize="14sp"></EditText>

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/InputHoraDesc"
                android:minHeight="48dp"
                android:padding="0dp"
                android:paddingRight="0dp"
                app:srcCompat="@drawable/ic_ampm" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_reloj" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/botones_abajo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                android:id="@+id/CardAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                android:onClick="irAPaso2"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/botoncompuestoazul"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/BotonAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/BotonSiguiente"
                        android:minHeight="22sp"
                        android:text="@string/BotonSiguiente"
                        android:textColor="@color/blancoAOC"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imageAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/BotonCrearDesc"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:srcCompat="@drawable/ic_adelante" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>